syntax = "proto3";
package v1;
option go_package = "github.com/alexmcook/transaction-ledger/api/proto/v1";

message CreateTransactionRequest {
  bytes account_id = 1;
  int32 transaction_type = 2;
  int64 amount = 3;
}

message TransactionBatch {
  repeated CreateTransactionRequest transactions = 1;
}
